Revert "Adding cucumber tests"
This reverts commit 2fa49a9a1a301a14635bbe40dc740dc339d79aa1.